# avocado-node

./: .gitignore  .gitmodules  CMakeLists.txt  Main.coffee  README.md  avocado-node.pro  main.coffee
SPI/: CMakeLists.txt  SPI.pro
node/: .gitignore  CMakeLists.txt  binding.gyp  node.pro
scripts/avo/config/: platform.coffee
scripts/avo/timing/: platform.coffee
